force-app/main/default/objects/Purchase_Order_Item__c/fields/Billable_Status__c.field-meta.xml
<CustomField>
    <fullName>Billable_Status__c</fullName>
    <label>Billable Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
                <default>true</default>
                <label>Billable</label>
            </value>
            <value>
                <fullName>Has Been Billed</fullName>
            </value>
            <value>
                <fullName>Not Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>