force-app/main/default/objects/Purchase_Order_Item__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Pound</fullName>
            </value>
            <value>
                <fullName>oz.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>